--- a/04-temperature-converter/index.html
+++ b/04-temperature-converter/index.html
@@ -34,6 +34,7 @@
     </form>
   </main>
 
-  <script type="module" src="./app.js"></script>
+  <script src="./app.js"></script>
+
 </body>
 </html>
