--- a/05-multiplication table-generator/index.html
+++ b/05-multiplication table-generator/index.html
@@ -3,26 +3,32 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Miltiplication Table Generator</title>
+        <title>Multiplication Table Generator</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <dic class="container">
+        <div class="container">
             <header>
-                <h1> Multiplication Table Generator</h1>
-                <p class="subtitle"> Master your times tables!</p>
+                <h1>Multiplication Table Generator</h1>
+                <p class="subtitle">Master your times tables!</p>
             </header>
             <main>
                 <div class="controls">
                     <div class="input-group">
-                        <label for="numberInput"> Number:</label>
-                        <input type="number id=rangeInput" value="10" min="1" max="20">
+                        <label for="numberInput">Number:</label>
+                        <input type="number" id="numberInput" value="5" min="1" max="20">
                     </div>
-                    <button id="generateBtn"> Generate Table</button>
+
+                    <div class="input-group">
+                        <label for="rangeInput">Range:</label>
+                        <input type="number" id="rangeInput" value="10" min="1" max="20">
+                    </div>
+
+                    <button id="generateBtn">Generate Table</button>
                 </div>
                 <div id="tableContainer"></div>
             </main>
-        </dic>
+        </div>
         <script src="script.js"></script>
     </body>
 </html>
